# agentic-grocery-price-scanner

./: .env.example  .gitignore  BOT_PROTECTION_SOLUTIONS.md  CLAUDE.md  DASHBOARD_SUMMARY.md  EVALUATION_FRAMEWORK_SUMMARY.md  INTELLIGENT_SCRAPER_SUMMARY.md  LLM_INTEGRATION_SUMMARY.md  MASTER_WORKFLOW_SUMMARY.md  MATCHER_AGENT_SUMMARY.md  MCP_INTEGRATION_README.md  PRODUCTION_READY_SUMMARY.md  README.md  TEST_RESULTS.md  ULTIMATE_SOLUTION.md  demo_evaluation_framework.py  demo_llm_grocery_tasks.py  demo_master_workflow.py  demo_matcher_agent.py  demo_optimizer_agent.py  demo_scraper.py  demo_vector_search.py  evaluation_cli.py  launch_dashboard.py  llm_integration_example.py  production_health_monitor.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_evaluation_demo.py  run_production_tests.py  setup.sh  test_advanced_scraping.py  test_basic_functionality.py  test_crawl4ai_integration.py  test_evaluation_framework_ready.py  test_human_browser_scraping.py  test_intelligent_scraper_demo.py  test_llm_integration.py  (+8 more)
agentic_grocery_price_scanner/: __init__.py  cli.py
agentic_grocery_price_scanner/agents/: __init__.py  base_agent.py  collection_analytics.py  database_integration.py  intelligent_scraper_agent.py  matcher_agent.py  mock_scraper_agent.py  optimizer_agent.py  scraper_agent.py  scraping_ui.py
agentic_grocery_price_scanner/caching/: __init__.py  cache_manager.py
agentic_grocery_price_scanner/config/: __init__.py  settings.py  store_loader.py  store_profiles.py
agentic_grocery_price_scanner/data_models/: __init__.py  base.py  ingredient.py  product.py  recipe.py  store.py
agentic_grocery_price_scanner/llm_client/: __init__.py  ollama_client.py  prompt_templates.py
config/: stores.yaml
dashboard/: README.md  config.py  real_time_executor.py  requirements.txt  streamlit_app.py
evaluation/: __init__.py  business_metrics_validator.py  continuous_improvement.py  golden_dataset.py  ml_model_evaluator.py  quality_dashboard.py  quality_monitor.py  regression_tester.py  reporting_system.py
tests/: conftest.py  test_all_systems.py  test_clipboard_scraper.py  test_config.py  test_data_models.py  test_database.py  test_human_browser_scraping.py  test_intelligent_scraper.py  test_production_scenarios.py  test_scraping_layers.py  test_vector_database.py
(+25 files in other folders)
